# padantic

./: .gitignore  Cargo.toml  english.chars  oracle.sh  oracle_example.py  readme.md
src/: cli.rs  crypt.rs  error.rs  main.rs  msg.rs  oracle.rs  prio.rs  ui.rs
