[package]
name = "padantic"
version = "0.1.0"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
futures = "0.3.4"
async-std = "1.5.0"
clap = "2.33.0"
snafu = "0.6.2"
hex = "0.4.2"
