[package]
name = "padantic"
version = "0.1.0"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
futures = "0.3.4"
clap = "2.33.0"
snafu = "0.6.2"
hex = "0.4.2"
crossterm = "0.14"
tokio = { version = "0.2.13", features = ["process", "rt-threaded", "macros"] }
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
