[package]
name = "padantic"
version = "0.1.0"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
clap = "2.33.0"
snafu = "0.6.2"
hex = "0.4.2"
crossterm = "0.16"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
crossbeam = "0.7.3"
log = "0.4.8"
simplelog = "0.7.4"
